# travel-copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
results/: stage1.txt  stage2a.txt  stage2b.txt
scripts/: ask.py  peek.py
src/travel_copilot/: agent.py  config.py  llm.py  tools.py
src/travel_copilot/api/: main.py
src/travel_copilot/ingestion/: chunk.py  index.py  parse.py
src/travel_copilot/retrieval/: hybrid.py  rerank.py  retriever.py
