[project]
name = "travel-copilot"
version = "0.1.0"
description = ""
authors = [
    {name = "Shrouk",email = "sshroukelghoul@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "ollama (>=0.6.2,<0.7.0)",
    "mwparserfromhell (>=0.7.2,<0.8.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "flashrank (>=0.2.10,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
